chore: adjustments to improve experiment
